--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -11,12 +11,12 @@
     routerLinkActive="active" [routerLinkActiveOptions]= "{exact: true}">
     Detail
   </a>
-  <a [routerLink]=" ['./barrel'] "
+  <!-- <a [routerLink]=" ['./barrel'] "
     routerLinkActive="active" [routerLinkActiveOptions]= "{exact: true}">
     Barrel
   </a>
   <a [routerLink]=" ['./about'] "
     routerLinkActive="active" [routerLinkActiveOptions]= "{exact: true}">
     About
-  </a>
+  </a> -->
 </nav>
