--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,7 +10,7 @@
 
   <hr>
 
-  <div>
+<!--   <div>
     <h4>Local State</h4>
 
     <form (ngSubmit)="submitState(localState.value)" autocomplete="off">
@@ -22,16 +22,16 @@
         autofocus>
 
       <button>Submit Value</button>
-    </form>
+    </form> -->
     <!--
         <input type="text" [value]="localState.value" (input)="localState.value = $event.target.value" autofocus>
         Rather than wiring up two-way data-binding ourselves with [value] and (input)
         we can use Angular's [(ngModel)] syntax
         <input type="text" name="textInput" [(ngModel)]="localState.value" autofocus>
       -->
-
+<!-- 
     <pre>this.localState = {{ localState | json }}</pre>
 
-  </div>
+  </div> -->
 
 </div>
