--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,4 @@
   <router-outlet></router-outlet>
 </main>
 <global-footer></global-footer>
-<pre class="app-state">this.appState.state = {{ appState.state | json }}</pre>
+<!-- <pre class="app-state">this.appState.state = {{ appState.state | json }}</pre> -->
